# intern_convin

./: README.md  pyproject.toml
django_project/: client_secret.json  settings.py  urls.py  views.py
